my first ever website

--- a/index.html
+++ b/index.html
@@ -9,18 +9,50 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <Section>
+   <Section class="top-banner">
     <div class="half-width">
         <h1>Welcome To</h1>
-        <h1><span class="name-highlight">Afsana</span>Website</h1>
+        <h1><span class="orange-highlight">Afsana</span>Website</h1>
         <h3>World class Professional Developer</h3>
         <p>Hi, I'm Afsana Alom Tisha, and I graduated from International  University and Business Agriculture and technology  in Computer Science and Engineering. My interests are in Front End Engineering, and I love to create beautiful and performant products with delightful user experiences.</p>
+        <a class="link-button" target="_blank" href="https://www.linkedin.com/in/afsana-alom-tisha-a3231923a">HIRE ME</a>
     </div>
     <div class="half-width">
-        <img src="images/tisshu.png" alt="tisha">
+        <img src="images/image 10.png" alt="
+        ">
+       
     </div>
     
    </Section>
+   <section class="dream-area">
+    <div class="half-width">
+        <img src="images/profilepic.png" alt=""></div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+             <h3>Become a Excellent Developer</h3>
+             <p>I already learned the basic of html and CSS And I can build good websites.My goal is to make more websites and learn the advanced topic </p>
+             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/afsana-alom-tisha-a3231923a">DOWNLOAD RESUME</a>  
 
+    </div>
+   </section>
+  <section class="expericence-area">
+    <h2>Experiences</h2>
+    <div id="full-stack"class="half-width single-expericence" >
+        <h2>Front End Developer</h2>
+        <h3 class="orange-highlight">
+            2021 - present 
+        </h3>
+        <p>I can develop and design the user interface of websites.This includes creating and implementing layouts, styles, and graphics using HTML, CSS, and JavaScript. I can also work on making sure that the website or application is responsive and accessible to different devices and users. Additionally, I will work on improving the user experience and interactivity of the website or application by using libraries and frameworks such as jQuery, React, or Angular. </p>
+  </div>
+  <div id="baby-web" class="half-width single-expericence">
+ <h2> Baby Web developer</h2>
+ <h3 class="orange-highlight">Programme learner</h3>
+ <p>I am a master of HTML,CSS and Javascript .I know everything needed to make a website function,efficient . I didn't stop the web.I went beyond with most popular Javascript, framework called Vua JS. I even know the development server and security. I will give you 100% web solution.</p>
+  </div>
+   
+  </section>
 </body>
+<footer>
+<p>copyright Afsana Alom Tisha 2023, All rights resarved</p>
+</footer>
 </html>
